SVG high contrast fixes

--- a/app/assets/sass/components/_bar-chart.scss
+++ b/app/assets/sass/components/_bar-chart.scss
@@ -16,6 +16,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  forced-color-adjust: auto;
   cursor: default;
   @include mq ($from: desktop) {
     height:450px;
